<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="92dp"
        >


    <LinearLayout
        android:id="@+id/welcome_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/welcome_logo" />



    </LinearLayout>

        <LinearLayout
            android:id="@+id/welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_pic"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka"
                android:text="ברוך הבא\n לMoveIt"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_txt"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="אני:"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                 />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="הכנס שם משתמש"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.925"
                app:layout_constraintStart_toStartOf="parent"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_txt"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCoach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_small_button"
                android:paddingLeft="8dp"
                android:paddingRight="5dp"
                android:text="מאמן"
                android:textSize="26sp"
                app:icon="@drawable/personal_trainer"
                app:iconGravity="textEnd"
                app:backgroundTint="@null"
                app:iconPadding="5dp"
                android:backgroundTint="@null"
                app:iconSize="40dp"
                app:iconTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/myHealth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button3"
                 />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTrainee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/rounded_small_button"
                android:text="מתאמן"
                android:textSize="26sp"
                app:icon="@drawable/trainee"
                app:iconGravity="textEnd"
                app:backgroundTint="@null"
                android:backgroundTint="@null"
                app:iconPadding="5dp"
                app:iconSize="40dp"
                app:iconTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/myHealth"
                app:layout_constraintStart_toStartOf="parent"
                 />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/health_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvHealthAgg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="אשר את הסכם הבריאות שלנו."
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24dp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/continue_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/health_txt"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_ready"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>








    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>